# microservices-project

./: docker-compose.yml  git.txt
a-java/: Dockerfile  pom.xml
b-python/: Dockerfile  requirements.txt
b-python/app/: routes.py
c-kotlin/: Dockerfile  pom.xml
c-kotlin/src/main/kotlin/com/example/: HelloController.kt  MainApplication.kt
d-javascript/: Dockerfile  package.json
d-javascript/src/: app.js
e-csharp/: Dockerfile  Program.cs  Startup.cs
e-csharp/Controllers/: HelloController.cs
f-php/: Dockerfile  composer.json  index.php
g-ruby/: Dockerfile  Gemfile  app.rb  config.ru
h-golang/: Dockerfile  go.mod  main.go
i-rust/: Cargo.toml  Dockerfile
i-rust/src/: main.rs
j-scala/: Dockerfile  pom.xml
j-scala/src/main/scala/com/example/: HelloController.scala  MainApplication.scala
k-clojure/: Dockerfile  pom.xml
k-clojure/src/main/clojure/com/example/: core.clj
l-haskell/: Dockerfile  app.cabal  app.hs
m-erlang/: Dockerfile  README.md  rebar.config
m-erlang/apps/m_erlang/src/: m_erlang.app.src  m_erlang_app.erl  m_erlang_handshake_handler.erl  m_erlang_hello_handler.erl  m_erlang_sup.erl
m-erlang/config/: sys.config  vm.args
n-swift/: Dockerfile  Package.swift
n-swift/Sources/App/: main.swift
o-dart/: Dockerfile  pubspec.yaml
p-cplusplus/: CMakeLists.txt  Dockerfile
p-cplusplus/src/: main.cpp
q-lisp/: Dockerfile  app.lisp
r-c/: Dockerfile  Makefile
r-c/src/: main.c
s-groovy/: Dockerfile  pom.xml
t-crystal/: Dockerfile  shard.yml
t-crystal/src/: hello_controller.cr  main_application.cr
test-port-8888/: pom.xml
(+6 files in other folders)
